<resources>
    <string name="art_app_name">传统文化鉴赏</string>
    <string name="shr_hint_username">Username</string>
    <string name="shr_hint_password">Password</string>
    <string name="username">admin</string>
    <string name="password">password</string>
    <string name="shr_button_next">进入</string>
    <string name="shr_button_cancel">取消</string>
    <string name="shr_error_password">请按照提示输入密码！</string>
    <string name="shr_error_username">请按照提示输入账号！</string>
    <string name="shr_filter_title">Filter</string>
    <string name="shr_search_title">Search</string>
    <string name="shr_product_title">Title</string>
    <string name="shr_product_description">Secondary text</string>


<!--    文化分类名称-->
    <string name="jie_qi">二十四节气→</string>
    <string name="drama">戏剧→</string>
    <string name="decoupage">剪纸→</string>
    <string name="delicacies">各地传统美食→</string>

    <!-- Shrine backdrop menu labels -->
    <string name="shr_featured_label">Featured</string>
    <string name="shr_apartment_label">Apartment</string>
    <string name="shr_accessories_label">Accessories</string>
    <string name="shr_shoes_label">Shoes</string>
    <string name="shr_tops_label">Tops</string>
    <string name="shr_bottoms_label">Bottoms</string>
    <string name="shr_dresses_label">Dresses</string>
    <string name="shr_account_label">My Account</string>
    <string name="shr_logo_content_description">Shrine Logo</string>

<!--    提示信息-->
    <string name="empty">正在开发中，请等待...</string>
</resources>
