<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginTop="20dp"
tools:context="com.myappCul.codelabs.mdc.kotlin.culture103.CultureListFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="300dp"
                android:layout_height="200dp"
                app:srcCompat="@drawable/culture_jie_qi" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:padding="5dp">

                <Button
                    android:id="@+id/button_jie_qi"
                    android:onClick="onButtonJieQi"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textSize="22sp"
                    android:backgroundTint="@color/list_green"
                    android:text="@string/jie_qi"/>
            </LinearLayout>


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="300dp"
                android:layout_height="200dp"
                app:srcCompat="@drawable/culture_jian_zhi" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:padding="5dp">

                <Button
                    android:id="@+id/button_jian_zhi"
                    android:onClick="onButtonJianZhi"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textSize="22sp"
                    android:backgroundTint="@color/list_green"
                    android:text="@string/decoupage"/>
            </LinearLayout>


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/white"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    app:srcCompat="@drawable/culture_xi_qu" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <Button
                        android:id="@+id/button_xi_jv"
                        android:onClick="onButtonXiJv"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:textColor="@color/black"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textSize="22sp"
                        android:backgroundTint="@color/list_green"
                        android:text="@string/drama"/>
                </LinearLayout>


            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/white"
            app:cardElevation="2dp"
            android:layout_marginBottom="100dp"
            app:cardPreventCornerOverlap="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    app:srcCompat="@drawable/culture_mei_shi" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <Button
                        android:id="@+id/button_mei_shi"
                        android:onClick="onButtonMeiShi"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:textColor="@color/black"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textSize="22sp"
                        android:backgroundTint="@color/list_green"
                        android:text="@string/delicacies"/>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</ScrollView>
